# omni

./: .gitignore  .pre-commit-config.yaml  README.md  inference.py  logger.py  mla.py  playground.ipynb  preprocess.py  pyproject.toml  train.py  train_fabric.py
examples/: logger.py  preprocess.py  train.py  train_fabric.py
experiments/: preprocess.py
experiments/basic/: README.md  inference.py  logger.py  train.py  train_fabric.py
experiments/differential_transformer/: README.md  diff_attention.py  diff_transformer.py  train.py
experiments/dsa/: dsa.py
experiments/dyt/: README.md  dyt.py  dyt_transformer.py  train.py
experiments/mla/: README.md  inference.py  mla.py  mla_rope.py  mla_transformer.py  train.py
experiments/ngpt/: README.md  n_attention.py  n_block.py  n_mlp.py  n_transformer.py  playground.ipynb  train.py  train_gpt.py  train_ngpt.py
experiments/train/: logger.py  train_fabric.py
merge/: main.py  playground.ipynb
merge/architectures/: llama.py
merge/modules/: activations.py  attention.py  block.py  config.py  embeddings.py  mlp.py  norm.py  pos_embeddings.py  transformer.py
merge/preprocessing/: preprocess.py  tokenizer.py
merge/utils/: tools.py
omni/architectures/: gpt.py  llama.py
omni/inference/: inference.py
omni/modules/: activations.py  attention.py  block.py  cache.py  config.py  mlp.py  norm.py  pos_embeddings.py  transformer.py
omni/preprocessing/: preprocess.py
omni/utils/: lr_schedule.py  setup.py  system.py
tests/: test_rope.py
