[project]
name = "merge"
version = "0.1.0"
description = "A collection of transformers based implementation of various papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jaxtyping>=0.2.36",
    "numpy>=2.1.3",
    "torch>=2.5.1",
    "transformers>=4.47.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
