[project]
name = "omni"
version = "0.1.0"
description = "A collection of transformers based implementation of various papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "gputil>=1.4.0",
    "ipykernel>=6.29.5",
    "jaxtyping>=0.2.36",
    "lightning>=2.5.0.post0",
    "numpy>=2.1.3",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "transformers>=4.47.0",
    "wandb>=0.19.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.setuptools.packages.find]
include = ["omni*"]
